--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "passport-linkedin": "~0.1.3",
     "passport-google": "~0.3.0",
     "passport-local": "~0.1.6",
-    "xtend": "~2.0.5"
+    "xtend": "~2.0.5",
+    "connect-mongo": "~0.3.2"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
