--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "passport-google": "~0.3.0",
     "passport-local": "~0.1.6",
     "xtend": "~2.0.5",
-    "connect-mongo": "~0.3.2"
+    "connect-mongo": "~0.3.2",
+    "winston": "~0.7.2"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "supertest": "~0.7.0"
+  },
   "repository": "",
   "author": "",
   "license": "BSD"
