--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "passport-local": "~0.1.6",
     "xtend": "~2.0.5",
     "connect-mongo": "~0.3.2",
-    "winston": "~0.7.2"
+    "winston": "~0.7.2",
+    "email-templates": "~0.1.0",
+    "nodemailer": "~0.5.2"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
