--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "connect-mongo": "~0.3.2",
     "winston": "~0.7.2",
     "email-templates": "~0.1.0",
-    "nodemailer": "~0.5.2"
+    "nodemailer": "~0.5.2",
+    "mailchimp-api": "~2.0.3"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
