--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "filewalker": "~0.1.2",
     "path": "~0.4.9",
     "archiver": "~0.4.10",
-    "sanitize-filename": "~1.0.1"
+    "sanitize-filename": "~1.0.1",
+    "moment": "~2.5.0"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
