Implemented EPUB2 generation with [async](https://github.com/caolan/async): creation of e.g. content.opf requires that Images and Fonts dirs have been fully created.
Also
* Added a font and an image to IT.
 * Clean up of "project" directories and sub directories "Images" will be
 * implemented with:
  * Clean up of "user" directories and sub directories "Fonts" should be
  * implemented in a User.delete, if one such will be implemented in the
  * future.
  * Created private helper function, isSystemType.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "archiver": "~0.4.10",
     "sanitize-filename": "~1.0.1",
     "moment": "~2.5.0",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "async": "~0.2.9"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
