--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sanitize-filename": "~1.0.1",
     "moment": "~2.5.0",
     "node-uuid": "~1.4.1",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "rimraf": "~2.2.5"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
