--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.2.4",
     "config": "~0.4.25",
     "mongoose": "~3.6.11",
     "ejs": "~0.8.4",
@@ -34,7 +33,8 @@
     "moment": "~2.5.0",
     "node-uuid": "~1.4.1",
     "async": "~0.2.9",
-    "rimraf": "~2.2.5"
+    "rimraf": "~2.2.5",
+    "express": "~3.4.8"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
