Added minor changes for server compatibility

--- a/lib/doc-converter/tidy_options.conf
+++ b/lib/doc-converter/tidy_options.conf
@@ -9,7 +9,8 @@ merge-spans: yes
 join-classes: yes
 show-body-only: yes
 force-output: yes
-drop-font-tags: yes
+drop-font-tags: no 
 word-2000: yes
 indent: auto
 indent-spaces: 2
+wrap: 0
