--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "async": "~0.2.9",
     "rimraf": "~2.2.5",
     "express": "~3.4.8",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "cssparser": "~0.2.2"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
