--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "rimraf": "~2.2.5",
     "express": "~3.4.8",
     "mkdirp": "~0.3.5",
-    "cssparser": "~0.2.2"
+    "cssparser": "~0.2.2",
+    "cheerio": "~0.16.0",
+    "underscore": "~1.6.0"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
