Initial Discourse SSO support

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "cssparser": "~0.2.2",
     "cheerio": "~0.16.0",
     "underscore": "~1.6.0",
-    "strftime": "^0.8.2"
+    "strftime": "^0.8.2",
+    "discourse-sso": "^1.0.1"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
