--- a/package.json
+++ b/package.json
@@ -7,43 +7,47 @@
     "test": "mocha"
   },
   "dependencies": {
+    "adm-zip": "~0.4.3",
+    "archiver": "^0.4.10",
+    "async": "^0.2.10",
+    "bcrypt": "^0.7.8",
+    "body-parser": "^1.8.1",
+    "cheerio": "^0.16.0",
     "config": "^0.4.37",
-    "mongoose": "^3.8.15",
+    "connect-mongo": "^0.4.1",
+    "connect-multiparty": "^1.2.4",
+    "cookie-parser": "^1.3.3",
+    "cssparser": "~0.2.2",
+    "discourse-sso": "^1.0.1",
     "ejs": "^0.8.8",
     "ejs-locals": "~1.0.2",
-    "bcrypt": "^0.7.8",
+    "email-templates": "^0.1.8",
+    "express": "^4.9.0",
+    "filewalker": "~0.1.2",
+    "mailchimp-api": "~2.0.3",
+    "method-override": "^2.2.0",
+    "mkdirp": "^0.3.5",
+    "moment": "^2.8.2",
+    "mongoose": "^3.8.15",
+    "ncp": "^0.4.2",
+    "node-uuid": "~1.4.1",
+    "nodemailer": "^1.2.1",
     "passport": "^0.2.1",
-    "passport-twitter": "^1.0.2",
     "passport-facebook": "^1.0.3",
     "passport-linkedin": "^0.1.3",
-    "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
-    "xtend": "^2.2.0",
-    "connect-mongo": "^0.3.3",
-    "winston": "~0.7.2",
-    "email-templates": "^0.1.8",
-    "nodemailer": "^1.2.1",
-    "mailchimp-api": "~2.0.3",
-    "ncp": "^0.4.2",
-    "adm-zip": "~0.4.3",
-    "filewalker": "~0.1.2",
-    "archiver": "^0.4.10",
-    "sanitize-filename": "^1.1.1",
-    "moment": "^2.8.2",
-    "node-uuid": "~1.4.1",
-    "async": "^0.2.10",
+    "passport-twitter": "^1.0.2",
     "rimraf": "~2.2.5",
-    "express": "^3.16.9",
-    "mkdirp": "^0.3.5",
-    "cssparser": "~0.2.2",
-    "cheerio": "^0.16.0",
-    "underscore": "^1.7.0",
+    "sanitize-filename": "^1.1.1",
     "strftime": "^0.8.2",
-    "discourse-sso": "^1.0.1",
-    "method-override": "^2.1.3",
-    "cookie-parser": "^1.3.2",
-    "body-parser": "^1.6.7",
-    "connect-multiparty": "^1.2.4"
+    "underscore": "^1.7.0",
+    "winston": "~0.7.2",
+    "xtend": "^2.2.0",
+    "express-session": "^1.8.2",
+    "morgan": "^1.3.1",
+    "passport-google-oauth": "^0.1.5",
+    "install": "^0.1.7",
+    "npm": "^2.0.0"
   },
   "readmeFilename": "README.md",
   "main": "app.js",
