--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Scripler/docvert.git
 [submodule "public/create/ckeditor"]
 	path = public/create/ckeditor
-	url = git://github.com/Scripler/ckeditor-scripler.git
+	url = https://github.com/Scripler/ckeditor-scripler.git
