--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "method-override": "^2.2.0",
     "mkdirp": "^0.3.5",
     "moment": "^2.8.2",
-    "mongoose": "^3.8.15",
+    "mongoose": "3.8.15",
     "morgan": "^1.3.1",
     "ncp": "^0.4.2",
     "node-uuid": "~1.4.1",
