--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "public/create/ckeditor"]
 	path = public/create/ckeditor
 	url = https://github.com/Scripler/ckeditor-scripler.git
+[submodule "public/reader/epubjs"]
+	path = public/reader/epubjs
+	url = C:/Users/AllanMørk/Dropbox/GitHub/epub.js
