MVP Reader. Backend for publish + reader (epubjs). Included dummy GUI for publish for testing.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "ejs": "^0.8.8",
     "ejs-locals": "~1.0.2",
     "express": "^4.9.0",
+    "express-dot-engine": "^1.0.6",
     "express-session": "^1.8.2",
     "filewalker": "~0.1.2",
     "install": "^0.1.7",
+    "lwip": "0.0.6",
     "mailchimp-api": "~2.0.3",
     "mandrill-api": "^1.0.40",
     "method-override": "^2.2.0",
@@ -47,6 +49,7 @@
     "sanitize-filename": "^1.1.1",
     "strftime": "^0.8.2",
     "underscore": "^1.7.0",
+    "webshot": "^0.15.4",
     "winston": "~0.7.2",
     "xtend": "^2.2.0"
   },
