--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "method-override": "^2.3.2",
     "mkdirp": "^0.5.0",
     "moment": "^2.10.2",
-    "mongoose": "^3.8.27",
+    "mongoose": "3.8.27",
     "morgan": "^1.5.2",
     "ncp": "^2.0.0",
     "node-uuid": "^1.4.3",
