--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-google-oauth": "^0.2.0",
     "passport-linkedin": "^0.1.3",
     "passport-local": "^1.0.0",
+    "ps-node": "0.0.4",
     "rimraf": "^2.3.2",
     "sanitize-filename": "^1.3.0",
     "strftime": "^0.9.0",
