Added billing country to payment modal and using geoip-lite for guessing the country.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-dot-engine": "^1.0.6",
     "express-session": "^1.11.1",
     "filewalker": "~0.1.2",
+    "geoip-lite": "^1.1.6",
     "lwip": "0.0.6",
     "mailchimp-api": "~2.0.3",
     "mandrill-api": "^1.0.45",
@@ -56,4 +57,3 @@
   "author": "",
   "license": "BSD"
 }
-
